sandbox/JoltC/Functions.h

// Jolt has no type named Vec2 but uses Vector<2> in its API sometimes
typedef struct JPC_Vec2 {
	float x;
	float y;
} JPC_Vec2;
typedef struct JPC_Vec3 {
	 float x;
	float y;
	float z;
	float _w;
} JPC_Vec3;
typedef struct JPC_Quat {
	 float x;
	float y;
	float z;
	float w;
} JPC_Quat;
typedef struct JPC_Mat44 {
	 JPC_Vec4 col[3];
	JPC_Vec3 col3;
} JPC_Mat44;
typedef uint32_t JPC_BodyID;
typedef struct JPC_Body JPC_Body;
////////////////////////////////////////////////////////////////////////////////
// CastShapeCollector

typedef struct JPC_CastShapeCollector JPC_CastShapeCollector;
typedef struct JPC_CastShapeCollectorFns {
	void (*Reset)(void *self);
	void (*AddHit)(void *self, JPC_CastShapeCollector *base, const JPC_ShapeCastResult *Result);
} JPC_CastShapeCollectorFns;
extern JPC_CastShapeCollector* JPC_CastShapeCollector_new(
	void *self,
	JPC_CastShapeCollectorFns fns);
extern void JPC_CastShapeCollector_delete(JPC_CastShapeCollector* object);
extern void JPC_CastShapeCollector_UpdateEarlyOutFraction(JPC_CastShapeCollector *self, float inFraction);
////////////////////////////////////////////////////////////////////////////////
// CollideShapeCollector

typedef struct JPC_CollideShapeCollector JPC_CollideShapeCollector;
typedef struct JPC_CollideShapeCollectorFns {
	void (*Reset)(void *self);
	void (*AddHit)(void *self, JPC_CollideShapeCollector *base, const JPC_CollideShapeResult *Result);
} JPC_CollideShapeCollectorFns;
extern JPC_CollideShapeCollector* JPC_CollideShapeCollector_new(
	void *self,
	JPC_CollideShapeCollectorFns fns);
extern void JPC_CollideShapeCollector_delete(JPC_CollideShapeCollector* object);
extern void JPC_CollideShapeCollector_UpdateEarlyOutFraction(JPC_CollideShapeCollector *self, float inFraction);
////////////////////////////////////////////////////////////////////////////////
// DrawSettings

typedef struct JPC_BodyManager_DrawSettings {
	bool mDrawGetSupportFunction;
	bool mDrawSupportDirection;
	bool mDrawGetSupportingFace;
	bool mDrawShape;
	bool mDrawShapeWireframe;
	JPC_ShapeColor mDrawShapeColor;
	bool mDrawBoundingBox;
	bool mDrawCenterOfMassTransform;
	bool mDrawWorldTransform;
	bool mDrawVelocity;
	bool mDrawMassAndInertia;
	bool mDrawSleepStats;
	bool mDrawSoftBodyVertices;
	bool mDrawSoftBodyVertexVelocities;
	bool mDrawSoftBodyEdgeConstraints;
	bool mDrawSoftBodyBendConstraints;
	bool mDrawSoftBodyVolumeConstraints;
	bool mDrawSoftBodySkinConstraints;
	bool mDrawSoftBodyLRAConstraints;
	bool mDrawSoftBodyPredictedBounds;
	JPC_SoftBodyConstraintColor DrawSoftBodyConstraintColor;
} JPC_BodyManager_DrawSettings;
extern void JPC_BodyManager_DrawSettings_default(JPC_BodyManager_DrawSettings* object);
////////////////////////////////////////////////////////////////////////////////
// DebugRendererSimple

typedef struct JPC_DebugRendererSimpleFns {
	void (*DrawLine)(const void *self, JPC_RVec3 inFrom, JPC_RVec3 inTo, JPC_Color inColor);
} JPC_DebugRendererSimpleFns;
typedef struct JPC_DebugRendererSimple JPC_DebugRendererSimple;
extern JPC_DebugRendererSimple* JPC_DebugRendererSimple_new(
	const void *self,
	JPC_DebugRendererSimpleFns fns);
extern void JPC_DebugRendererSimple_delete(JPC_DebugRendererSimple* object);
////////////////////////////////////////////////////////////////////////////////
// String

typedef struct JPC_String JPC_String;
extern void JPC_String_delete(JPC_String* self);
extern const char* JPC_String_c_str(JPC_String* self);
////////////////////////////////////////////////////////////////////////////////
// Constraint -> RefTarget<Constraint>

typedef struct JPC_Constraint JPC_Constraint;
extern uint32_t JPC_Constraint_GetRefCount(const JPC_Constraint* self);
extern void JPC_Constraint_AddRef(const JPC_Constraint* self);
extern void JPC_Constraint_Release(const JPC_Constraint* self);
extern void JPC_Constraint_delete(JPC_Constraint* self);
// extern JPC_ConstraintType JPC_Constraint_GetType(const JPC_Constraint* self);
// extern JPC_ConstraintSubType JPC_Constraint_GetSubType(const JPC_Constraint* self);

extern uint32_t JPC_Constraint_GetConstraintPriority(const JPC_Constraint* self);
extern void JPC_Constraint_SetConstraintPriority(JPC_Constraint* self, uint32_t inPriority);
extern uint JPC_Constraint_GetNumVelocityStepsOverride(const JPC_Constraint* self);
extern void JPC_Constraint_SetNumVelocityStepsOverride(JPC_Constraint* self, uint inN);
extern uint JPC_Constraint_GetNumPositionStepsOverride(const JPC_Constraint* self);
extern void JPC_Constraint_SetNumPositionStepsOverride(JPC_Constraint* self, uint inN);
extern bool JPC_Constraint_GetEnabled(const JPC_Constraint* self);
extern void JPC_Constraint_SetEnabled(JPC_Constraint* self, bool inEnabled);
extern uint64_t JPC_Constraint_GetUserData(const JPC_Constraint* self);
extern void JPC_Constraint_SetUserData(JPC_Constraint* self, uint64_t inUserData);
extern void JPC_Constraint_NotifyShapeChanged(JPC_Constraint* self, JPC_BodyID inBodyID, JPC_Vec3 inDeltaCOM);
////////////////////////////////////////////////////////////////////////////////
// TwoBodyConstraint -> Constraint -> RefTarget<Constraint>

typedef struct JPC_TwoBodyConstraint JPC_TwoBodyConstraint;
extern JPC_Body* JPC_TwoBodyConstraint_GetBody1(const JPC_TwoBodyConstraint* self);
extern JPC_Body* JPC_TwoBodyConstraint_GetBody2(const JPC_TwoBodyConstraint* self);
extern JPC_Mat44 JPC_TwoBodyConstraint_GetConstraintToBody1Matrix(const JPC_TwoBodyConstraint* self);
extern JPC_Mat44 JPC_TwoBodyConstraint_GetConstraintToBody2Matrix(const JPC_TwoBodyConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// FixedConstraint -> TwoBodyConstraint -> Constraint -> RefTarget<Constraint>

typedef struct JPC_FixedConstraint JPC_FixedConstraint;
extern JPC_Vec3 JPC_FixedConstraint_GetTotalLambdaPosition(const JPC_FixedConstraint* self);
extern JPC_Vec3 JPC_FixedConstraint_GetTotalLambdaRotation(const JPC_FixedConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// DistanceConstraint -> TwoBodyConstraint -> Constraint -> RefTarget<Constraint>

typedef struct JPC_DistanceConstraint JPC_DistanceConstraint;
extern float JPC_DistanceConstraint_GetTotalLambdaPosition(const JPC_DistanceConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// SixDOFConstraint -> TwoBodyConstraint -> Constraint -> RefTarget<Constraint>

typedef struct JPC_SixDOFConstraint JPC_SixDOFConstraint;
extern JPC_Vec3 JPC_SixDOFConstraint_GetTranslationLimitsMin(const JPC_SixDOFConstraint* self);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTranslationLimitsMax(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetTranslationLimits(JPC_SixDOFConstraint* self, JPC_Vec3 inLimitMin, JPC_Vec3 inLimitMax);
extern JPC_Vec3 JPC_SixDOFConstraint_GetRotationLimitsMin(const JPC_SixDOFConstraint* self);
extern JPC_Vec3 JPC_SixDOFConstraint_GetRotationLimitsMax(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetRotationLimits(JPC_SixDOFConstraint* self, JPC_Vec3 inLimitMin, JPC_Vec3 inLimitMax);
extern float JPC_SixDOFConstraint_GetLimitsMin(const JPC_SixDOFConstraint* self, JPC_SixDOFConstraint_Axis inAxis);
extern float JPC_SixDOFConstraint_GetLimitsMax(const JPC_SixDOFConstraint* self, JPC_SixDOFConstraint_Axis inAxis);
extern bool JPC_SixDOFConstraint_IsFreeAxis(const JPC_SixDOFConstraint* self, JPC_SixDOFConstraint_Axis inAxis);
// const SpringSettings & GetLimitsSpringSettings(JPC_SixDOFConstraint_Axis inAxis) const { JPH_ASSERT(inAxis < JPC_SixDOFConstraint_Axis::NumTranslation); return mLimitsSpringSettings[inAxis]; }
// void SetLimitsSpringSettings(JPC_SixDOFConstraint_Axis inAxis, const SpringSettings& inLimitsSpringSettings) { JPH_ASSERT(inAxis < JPC_SixDOFConstraint_Axis::NumTranslation); mLimitsSpringSettings[inAxis] = inLimitsSpringSettings; CacheHasSpringLimits(); }

extern void JPC_SixDOFConstraint_SetMaxFriction(JPC_SixDOFConstraint* self, JPC_SixDOFConstraint_Axis inAxis, float inFriction);
extern float JPC_SixDOFConstraint_GetMaxFriction(const JPC_SixDOFConstraint* self, JPC_SixDOFConstraint_Axis inAxis);
extern JPC_Quat JPC_SixDOFConstraint_GetRotationInConstraintSpace(const JPC_SixDOFConstraint* self);
/// Motor settings
// MotorSettings & GetMotorSettings(EAxis inAxis)
// const MotorSettings & GetMotorSettings(EAxis inAxis) const

// void SetMotorState(EAxis inAxis, EMotorState inState);
// EMotorState GetMotorState(EAxis inAxis) const

extern JPC_Vec3 JPC_SixDOFConstraint_GetTargetVelocityCS(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetTargetVelocityCS(JPC_SixDOFConstraint* self, JPC_Vec3 inVelocity);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTargetAngularVelocityCS(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetTargetAngularVelocityCS(JPC_SixDOFConstraint* self, JPC_Vec3 inAngularVelocity);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTargetPositionCS(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetTargetPositionCS(JPC_SixDOFConstraint* self, JPC_Vec3 inPosition);
extern JPC_Quat JPC_SixDOFConstraint_GetTargetOrientationCS(const JPC_SixDOFConstraint* self);
extern void JPC_SixDOFConstraint_SetTargetOrientationCS(JPC_SixDOFConstraint* self, JPC_Quat inOrientation);
extern void JPC_SixDOFConstraint_SetTargetOrientationBS(JPC_SixDOFConstraint* self, JPC_Quat inOrientation);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTotalLambdaPosition(JPC_SixDOFConstraint* self);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTotalLambdaRotation(JPC_SixDOFConstraint* self);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTotalLambdaMotorTranslation(JPC_SixDOFConstraint* self);
extern JPC_Vec3 JPC_SixDOFConstraint_GetTotalLambdaMotorRotation(JPC_SixDOFConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// HingeConstraint

typedef struct JPC_HingeConstraint JPC_HingeConstraint;
extern void JPC_HingeConstraint_SetMotorState(JPC_HingeConstraint* self, JPC_MotorState inState);
extern JPC_MotorState JPC_HingeConstraint_GetMotorState(const JPC_HingeConstraint* self);
extern void JPC_HingeConstraint_SetTargetAngularVelocity(JPC_HingeConstraint* self, float inAngularVelocity);
extern float JPC_HingeConstraint_GetTargetAngularVelocity(const JPC_HingeConstraint* self);
extern void JPC_HingeConstraint_SetTargetAngle(JPC_HingeConstraint* self, float inAngle);
extern float JPC_HingeConstraint_GetTargetAngle(const JPC_HingeConstraint* self);
extern JPC_Vec3 JPC_HingeConstraint_GetTotalLambdaPosition(const JPC_HingeConstraint* self);
extern JPC_Vec2 JPC_HingeConstraint_GetTotalLambdaRotation(const JPC_HingeConstraint* self);
extern float JPC_HingeConstraint_GetTotalLambdaRotationLimits(const JPC_HingeConstraint* self);
extern float JPC_HingeConstraint_GetTotalLambdaMotor(const JPC_HingeConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// SliderConstraint

typedef struct JPC_SliderConstraint JPC_SliderConstraint;
extern void JPC_SliderConstraint_SetMotorState(JPC_SliderConstraint* self, JPC_MotorState inState);
extern JPC_MotorState JPC_SliderConstraint_GetMotorState(const JPC_SliderConstraint* self);
extern void JPC_SliderConstraint_SetTargetVelocity(JPC_SliderConstraint* self, float inVelocity);
extern float JPC_SliderConstraint_GetTargetVelocity(const JPC_SliderConstraint* self);
extern void JPC_SliderConstraint_SetTargetPosition(JPC_SliderConstraint* self, float inPosition);
extern float JPC_SliderConstraint_GetTargetPosition(const JPC_SliderConstraint* self);
extern JPC_Vec2 JPC_SliderConstraint_GetTotalLambdaPosition(const JPC_SliderConstraint* self);
extern float JPC_SliderConstraint_GetTotalLambdaPositionLimits(const JPC_SliderConstraint* self);
extern JPC_Vec3 JPC_SliderConstraint_GetTotalLambdaRotation(const JPC_SliderConstraint* self);
extern float JPC_SliderConstraint_GetTotalLambdaMotor(const JPC_SliderConstraint* self);
////////////////////////////////////////////////////////////////////////////////
// ConstraintSettings

typedef struct JPC_ConstraintSettings {
	bool Enabled;
	uint32_t ConstraintPriority;
	uint NumVelocityStepsOverride;
	uint NumPositionStepsOverride;
	float DrawConstraintSize;
	uint64_t UserData;
} JPC_ConstraintSettings;
extern void JPC_ConstraintSettings_default(JPC_ConstraintSettings* settings);
////////////////////////////////////////////////////////////////////////////////
// SpringSettings

typedef struct JPC_SpringSettings {
	JPC_SpringMode Mode;
	float FrequencyOrStiffness;
	float Damping;
} JPC_SpringSettings;
extern void JPC_SpringSettings_default(JPC_SpringSettings* settings);
////////////////////////////////////////////////////////////////////////////////
// MotorSettings

typedef struct JPC_MotorSettings {
	JPC_SpringSettings SpringSettings;
	float MinForceLimit;
	float MaxForceLimit;
	float MinTorqueLimit;
	float MaxTorqueLimit;
} JPC_MotorSettings;
extern void JPC_MotorSettings_default(JPC_MotorSettings* settings);