sandbox/JoltC/fp_jolt.pas


function JPC_CastShapeCollector_new(self: pointer; fns: TJPC_CastShapeCollectorFns): PJPC_CastShapeCollector; cdecl; external joltc;
procedure JPC_CastShapeCollector_delete(obj: PJPC_CastShapeCollector); cdecl; external joltc;
procedure JPC_CastShapeCollector_UpdateEarlyOutFraction(self: PJPC_CastShapeCollector; inFraction: single); cdecl; external joltc;

type
  PJPC_CollideShapeCollector = type Pointer;

  TJPC_CollideShapeCollectorFns = record
    Reset: procedure(self: pointer); cdecl;
    AddHit: procedure(self: pointer; base: PJPC_CollideShapeCollector; Result: PJPC_CollideShapeResult); cdecl;
  end;
  PJPC_CollideShapeCollectorFns = ^TJPC_CollideShapeCollectorFns;

function JPC_CollideShapeCollector_new(self: pointer; fns: TJPC_CollideShapeCollectorFns): PJPC_CollideShapeCollector; cdecl; external joltc;
procedure JPC_CollideShapeCollector_delete(obj: PJPC_CollideShapeCollector); cdecl; external joltc;
procedure JPC_CollideShapeCollector_UpdateEarlyOutFraction(self: PJPC_CollideShapeCollector; inFraction: single); cdecl; external joltc;

type
  TJPC_BodyManager_DrawSettings = record
    mDrawGetSupportFunction: Tbool;
    mDrawSupportDirection: Tbool;
    mDrawGetSupportingFace: Tbool;
    mDrawShape: Tbool;
    mDrawShapeWireframe: Tbool;
    mDrawShapeColor: TJPC_ShapeColor;
    mDrawBoundingBox: Tbool;
    mDrawCenterOfMassTransform: Tbool;
    mDrawWorldTransform: Tbool;
    mDrawVelocity: Tbool;
    mDrawMassAndInertia: Tbool;
    mDrawSleepStats: Tbool;
    mDrawSoftBodyVertices: Tbool;
    mDrawSoftBodyVertexVelocities: Tbool;
    mDrawSoftBodyEdgeConstraints: Tbool;
    mDrawSoftBodyBendConstraints: Tbool;
    mDrawSoftBodyVolumeConstraints: Tbool;
    mDrawSoftBodySkinConstraints: Tbool;
    mDrawSoftBodyLRAConstraints: Tbool;
    mDrawSoftBodyPredictedBounds: Tbool;
    DrawSoftBodyConstraintColor: TJPC_SoftBodyConstraintColor;
  end;
  PJPC_BodyManager_DrawSettings = ^TJPC_BodyManager_DrawSettings;

procedure JPC_BodyManager_DrawSettings_default(obj: PJPC_BodyManager_DrawSettings); cdecl; external joltc;

type
  TJPC_DebugRendererSimpleFns = record
    DrawLine: procedure(self: pointer; inFrom: TJPC_RVec3; inTo: TJPC_RVec3; inColor: TJPC_Color); cdecl;
  end;
  PJPC_DebugRendererSimpleFns = ^TJPC_DebugRendererSimpleFns;

  PJPC_DebugRendererSimple = type Pointer;

function JPC_DebugRendererSimple_new(self: pointer; fns: TJPC_DebugRendererSimpleFns): PJPC_DebugRendererSimple; cdecl; external joltc;
procedure JPC_DebugRendererSimple_delete(obj: PJPC_DebugRendererSimple); cdecl; external joltc;

type
  PJPC_String = type Pointer;
  PPJPC_String = ^PJPC_String;

procedure JPC_String_delete(self: PJPC_String); cdecl; external joltc;
function JPC_String_c_str(self: PJPC_String): pchar; cdecl; external joltc;

type
  PJPC_Constraint = type Pointer;

function JPC_Constraint_GetRefCount(self: PJPC_Constraint): Tuint32_t; cdecl; external joltc;
procedure JPC_Constraint_AddRef(self: PJPC_Constraint); cdecl; external joltc;
procedure JPC_Constraint_Release(self: PJPC_Constraint); cdecl; external joltc;
procedure JPC_Constraint_delete(self: PJPC_Constraint); cdecl; external joltc;
function JPC_Constraint_GetConstraintPriority(self: PJPC_Constraint): Tuint32_t; cdecl; external joltc;
procedure JPC_Constraint_SetConstraintPriority(self: PJPC_Constraint; inPriority: Tuint32_t); cdecl; external joltc;
function JPC_Constraint_GetNumVelocityStepsOverride(self: PJPC_Constraint): Tuint; cdecl; external joltc;
procedure JPC_Constraint_SetNumVelocityStepsOverride(self: PJPC_Constraint; inN: Tuint); cdecl; external joltc;
function JPC_Constraint_GetNumPositionStepsOverride(self: PJPC_Constraint): Tuint; cdecl; external joltc;
procedure JPC_Constraint_SetNumPositionStepsOverride(self: PJPC_Constraint; inN: Tuint); cdecl; external joltc;
function JPC_Constraint_GetEnabled(self: PJPC_Constraint): Tbool; cdecl; external joltc;
procedure JPC_Constraint_SetEnabled(self: PJPC_Constraint; inEnabled: Tbool); cdecl; external joltc;
function JPC_Constraint_GetUserData(self: PJPC_Constraint): Tuint64_t; cdecl; external joltc;
procedure JPC_Constraint_SetUserData(self: PJPC_Constraint; inUserData: Tuint64_t); cdecl; external joltc;
procedure JPC_Constraint_NotifyShapeChanged(self: PJPC_Constraint; inBodyID: TJPC_BodyID; inDeltaCOM: TJPC_Vec3); cdecl; external joltc;

type
  PJPC_TwoBodyConstraint = type Pointer;

function JPC_TwoBodyConstraint_GetBody1(self: PJPC_TwoBodyConstraint): PJPC_Body; cdecl; external joltc;
function JPC_TwoBodyConstraint_GetBody2(self: PJPC_TwoBodyConstraint): PJPC_Body; cdecl; external joltc;
function JPC_TwoBodyConstraint_GetConstraintToBody1Matrix(self: PJPC_TwoBodyConstraint): TJPC_Mat44; cdecl; external joltc;
function JPC_TwoBodyConstraint_GetConstraintToBody2Matrix(self: PJPC_TwoBodyConstraint): TJPC_Mat44; cdecl; external joltc;

type
  PJPC_FixedConstraint = type Pointer;

function JPC_FixedConstraint_GetTotalLambdaPosition(self: PJPC_FixedConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_FixedConstraint_GetTotalLambdaRotation(self: PJPC_FixedConstraint): TJPC_Vec3; cdecl; external joltc;

type
  PJPC_DistanceConstraint = type Pointer;

function JPC_DistanceConstraint_GetTotalLambdaPosition(self: PJPC_DistanceConstraint): single; cdecl; external joltc;

type
  PJPC_SixDOFConstraint = type Pointer;

function JPC_SixDOFConstraint_GetTranslationLimitsMin(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SixDOFConstraint_GetTranslationLimitsMax(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTranslationLimits(self: PJPC_SixDOFConstraint; inLimitMin: TJPC_Vec3; inLimitMax: TJPC_Vec3); cdecl; external joltc;
function JPC_SixDOFConstraint_GetRotationLimitsMin(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SixDOFConstraint_GetRotationLimitsMax(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetRotationLimits(self: PJPC_SixDOFConstraint; inLimitMin: TJPC_Vec3; inLimitMax: TJPC_Vec3); cdecl; external joltc;
function JPC_SixDOFConstraint_GetLimitsMin(self: PJPC_SixDOFConstraint; inAxis: TJPC_SixDOFConstraint_Axis): single; cdecl; external joltc;
function JPC_SixDOFConstraint_GetLimitsMax(self: PJPC_SixDOFConstraint; inAxis: TJPC_SixDOFConstraint_Axis): single; cdecl; external joltc;
function JPC_SixDOFConstraint_IsFreeAxis(self: PJPC_SixDOFConstraint; inAxis: TJPC_SixDOFConstraint_Axis): Tbool; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetMaxFriction(self: PJPC_SixDOFConstraint; inAxis: TJPC_SixDOFConstraint_Axis; inFriction: single); cdecl; external joltc;
function JPC_SixDOFConstraint_GetMaxFriction(self: PJPC_SixDOFConstraint; inAxis: TJPC_SixDOFConstraint_Axis): single; cdecl; external joltc;
function JPC_SixDOFConstraint_GetRotationInConstraintSpace(self: PJPC_SixDOFConstraint): TJPC_Quat; cdecl; external joltc;
function JPC_SixDOFConstraint_GetTargetVelocityCS(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTargetVelocityCS(self: PJPC_SixDOFConstraint; inVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_SixDOFConstraint_GetTargetAngularVelocityCS(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTargetAngularVelocityCS(self: PJPC_SixDOFConstraint; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_SixDOFConstraint_GetTargetPositionCS(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTargetPositionCS(self: PJPC_SixDOFConstraint; inPosition: TJPC_Vec3); cdecl; external joltc;
function JPC_SixDOFConstraint_GetTargetOrientationCS(self: PJPC_SixDOFConstraint): TJPC_Quat; cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTargetOrientationCS(self: PJPC_SixDOFConstraint; inOrientation: TJPC_Quat); cdecl; external joltc;
procedure JPC_SixDOFConstraint_SetTargetOrientationBS(self: PJPC_SixDOFConstraint; inOrientation: TJPC_Quat); cdecl; external joltc;
function JPC_SixDOFConstraint_GetTotalLambdaPosition(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SixDOFConstraint_GetTotalLambdaRotation(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SixDOFConstraint_GetTotalLambdaMotorTranslation(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SixDOFConstraint_GetTotalLambdaMotorRotation(self: PJPC_SixDOFConstraint): TJPC_Vec3; cdecl; external joltc;

type
  PJPC_HingeConstraint = type Pointer;

procedure JPC_HingeConstraint_SetMotorState(self: PJPC_HingeConstraint; inState: TJPC_MotorState); cdecl; external joltc;
function JPC_HingeConstraint_GetMotorState(self: PJPC_HingeConstraint): TJPC_MotorState; cdecl; external joltc;
procedure JPC_HingeConstraint_SetTargetAngularVelocity(self: PJPC_HingeConstraint; inAngularVelocity: single); cdecl; external joltc;
function JPC_HingeConstraint_GetTargetAngularVelocity(self: PJPC_HingeConstraint): single; cdecl; external joltc;
procedure JPC_HingeConstraint_SetTargetAngle(self: PJPC_HingeConstraint; inAngle: single); cdecl; external joltc;
function JPC_HingeConstraint_GetTargetAngle(self: PJPC_HingeConstraint): single; cdecl; external joltc;
function JPC_HingeConstraint_GetTotalLambdaPosition(self: PJPC_HingeConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_HingeConstraint_GetTotalLambdaRotation(self: PJPC_HingeConstraint): TJPC_Vec2; cdecl; external joltc;
function JPC_HingeConstraint_GetTotalLambdaRotationLimits(self: PJPC_HingeConstraint): single; cdecl; external joltc;
function JPC_HingeConstraint_GetTotalLambdaMotor(self: PJPC_HingeConstraint): single; cdecl; external joltc;

type
  PJPC_SliderConstraint = type Pointer;

procedure JPC_SliderConstraint_SetMotorState(self: PJPC_SliderConstraint; inState: TJPC_MotorState); cdecl; external joltc;
function JPC_SliderConstraint_GetMotorState(self: PJPC_SliderConstraint): TJPC_MotorState; cdecl; external joltc;
procedure JPC_SliderConstraint_SetTargetVelocity(self: PJPC_SliderConstraint; inVelocity: single); cdecl; external joltc;
function JPC_SliderConstraint_GetTargetVelocity(self: PJPC_SliderConstraint): single; cdecl; external joltc;
procedure JPC_SliderConstraint_SetTargetPosition(self: PJPC_SliderConstraint; inPosition: single); cdecl; external joltc;
function JPC_SliderConstraint_GetTargetPosition(self: PJPC_SliderConstraint): single; cdecl; external joltc;
function JPC_SliderConstraint_GetTotalLambdaPosition(self: PJPC_SliderConstraint): TJPC_Vec2; cdecl; external joltc;
function JPC_SliderConstraint_GetTotalLambdaPositionLimits(self: PJPC_SliderConstraint): single; cdecl; external joltc;
function JPC_SliderConstraint_GetTotalLambdaRotation(self: PJPC_SliderConstraint): TJPC_Vec3; cdecl; external joltc;
function JPC_SliderConstraint_GetTotalLambdaMotor(self: PJPC_SliderConstraint): single; cdecl; external joltc;

type
  TJPC_ConstraintSettings = record
    Enabled: Tbool;
    ConstraintPriority: Tuint32_t;
    NumVelocityStepsOverride: Tuint;
    NumPositionStepsOverride: Tuint;
    DrawConstraintSize: single;
    UserData: Tuint64_t;
  end;
  PJPC_ConstraintSettings = ^TJPC_ConstraintSettings;

procedure JPC_ConstraintSettings_default(settings: PJPC_ConstraintSettings); cdecl; external joltc;

type
  TJPC_SpringSettings = record
    Mode: TJPC_SpringMode;
    FrequencyOrStiffness: single;
    Damping: single;
  end;
  PJPC_SpringSettings = ^TJPC_SpringSettings;

procedure JPC_SpringSettings_default(settings: PJPC_SpringSettings); cdecl; external joltc;

type
  TJPC_MotorSettings = record
    SpringSettings: TJPC_SpringSettings;
    MinForceLimit: single;
    MaxForceLimit: single;
    MinTorqueLimit: single;
    MaxTorqueLimit: single;
  end;
  PJPC_MotorSettings = ^TJPC_MotorSettings;

procedure JPC_MotorSettings_default(settings: PJPC_MotorSettings); cdecl; external joltc;
